--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -16,14 +16,18 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
     - name: Set up Node.js ${{ matrix.node-version }}
+      working-directory: ./admin-client
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
     - name: Install dependencies
+      working-directory: ./admin-client
       run: npm install
     - name: Run the tests
+      working-directory: ./admin-client
       run: npm test
     - name: Build
+      working-directory: ./admin-client
       run: npm run build
 
   deployment:
