--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -46,8 +46,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: ./
-          file: ./Dockerfile
+          context: ./admin-client/
+          file: ./admin-client/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/admin-client:latest
 
