--- a/admin-client/Dockerfile
+++ b/admin-client/Dockerfile
@@ -1,11 +1,8 @@
 # pull official base image
-FROM node:13.12.0-alpine
+FROM node:latest
 
 # set working directory
-WORKDIR /admin-client
-
-# add `/app/node_modules/.bin` to $PATH
-ENV PATH /admin-client/node_modules/.bin:$PATH
+WORKDIR /app
 
 # install app dependencies
 COPY package.json ./
