--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "js-sha256": "^0.9.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.3.0",
     "react-cookie": "^4.1.1",
