--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -13,6 +13,7 @@
     "js-sha256": "^0.9.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.3.0",
+    "react-code-blocks": "^0.0.9-0",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
