--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -14,10 +14,12 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.3.0",
     "react-code-blocks": "^0.0.9-0",
+    "react-collapsible": "^2.8.4",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-tabs": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
